fixed swagger, added JWT auth, logger middleware, etc
