# auth/auth.go
@@ -1,0 +1,169 @@
+package auth
+
+import (
+	"bytes"
+	"crypto/rand"
+	"encoding/base64"
+	"errors"
+	"fmt"
+	"golang-rest-api-template/models"
+	"io"
+	"net/http"
+	"time"
+
+	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt"
+	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
+)
+
+// Claims struct to be encoded to JWT
+type Claims struct {
+	Username string `json:"username"`
+	jwt.StandardClaims
+}
+
+var JwtKey = []byte("ObL89O3nOSSEj6tbdHako0cXtPErzBUfq8l8o/3KD9g=INSECURE") // generate new random key for production
+
+// @BasePath /api/v1
+
+// LoginHandler godoc
+// @Summary Authenticate a user
+// @Schemes
+// @Description Authenticates a user using username and password, returns a JWT token if successful
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Param   user     body    models.LoginUser     true        "User login object"
+// @Success 200 {string} string "JWT Token"
+// @Failure 400 {string} string "Bad Request"
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /login [post]
+func LoginHandler(c *gin.Context) {
+	var incomingUser models.User
+	var dbUser models.User
+
+	// Get JSON body
+	if err := c.ShouldBindJSON(&incomingUser); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Bad Request"})
+		return
+	}
+
+	// Fetch the user from the database
+	if err := models.DB.Where("username = ?", incomingUser.Username).First(&dbUser).Error; err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid username or password"})
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
+		}
+		return
+	}
+
+	// Verify password
+	if err := bcrypt.CompareHashAndPassword([]byte(dbUser.Password), []byte(incomingUser.Password)); err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid username or password"})
+		return
+	}
+
+	// Generate JWT token
+	token, err := GenerateToken(dbUser.Username)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Error generating token"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"token": token})
+}
+
+// RegisterHandler godoc
+// @Summary Register a new user
+// @Schemes http
+// @Description Registers a new user with the given username and password
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Param   user     body    models.LoginUser     true        "User registration object"
+// @Success 200 {string} string	"Successfully registered"
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /register [post]
+func RegisterHandler(c *gin.Context) {
+	var user models.LoginUser
+
+	fmt.Println(GetRequestBody(c))
+
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	// Hash the password
+	hashedPassword, err := HashPassword(user.Password)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Could not hash password"})
+		return
+	}
+
+	// Create new user
+	newUser := models.User{Username: user.Username, Password: hashedPassword}
+
+	// Save the user to the database
+	if err := models.DB.Create(&newUser).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Could not save user"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Registration successful"})
+}
+
+func HashPassword(password string) (string, error) {
+	bytes, err := bcrypt.GenerateFromPassword([]byte(password), 14)
+	return string(bytes), err
+}
+
+func GenerateToken(username string) (string, error) {
+	expirationTime := time.Now().Add(5 * time.Minute)
+	claims := &Claims{
+		Username: username,
+		StandardClaims: jwt.StandardClaims{
+			ExpiresAt: expirationTime.Unix(),
+		},
+	}
+
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+	tokenString, err := token.SignedString(JwtKey)
+
+	if err != nil {
+		return "", err
+	}
+
+	return tokenString, nil
+}
+
+func GenerateRandomJWTKey() string {
+	key := make([]byte, 32) // generate a 256 bit key
+	_, err := rand.Read(key)
+	if err != nil {
+		panic("Failed to generate random key: " + err.Error())
+	}
+
+	return base64.StdEncoding.EncodeToString(key)
+}
+
+// GetRequestBody reads the request body and returns it as a string.
+// It also restores the request body back to its original state so it can be read again.
+func GetRequestBody(c *gin.Context) (string, error) {
+	var bodyBytes []byte
+	if c.Request.Body != nil {
+		var err error
+		bodyBytes, err = io.ReadAll(c.Request.Body)
+		if err != nil {
+			return "", err
+		}
+	}
+	// Restore the io.ReadCloser to its original state
+	c.Request.Body = io.NopCloser(bytes.NewBuffer(bodyBytes))
+	// Convert to string and return
+	return string(bodyBytes), nil
+}
