# main.go
@@ -1,6 +1,7 @@
 package main
 
 import (
+	"golang-rest-api-template/auth"
 	"golang-rest-api-template/controllers"
 	"golang-rest-api-template/middleware"
 	"golang-rest-api-template/models"
@@ -13,14 +14,36 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title           Swagger Example API
+// @version         1.0
+// @description     This is a sample server celler server.
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email  support@swagger.io
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8001
+// @BasePath  /api/v1
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
 func main() {
 	//gin.SetMode(gin.ReleaseMode)
 	gin.SetMode(gin.DebugMode)
 	r := gin.Default()
 
-	r.Use(middleware.XssMiddleware())
+	r.Use(gin.Logger())
 	if gin.Mode() == gin.ReleaseMode {
 		r.Use(middleware.SecurityMiddleware())
+		r.Use(middleware.XssMiddleware())
 	}
 	r.Use(middleware.CorsMiddleware())
 
@@ -29,12 +52,15 @@ func main() {
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	v1 := r.Group("/api/v1")
 	{
-		v1.GET("/helloworld", controllers.Helloworld)
+		v1.GET("/", controllers.Healthcheck)
 		v1.GET("/books", controllers.FindBooks)
-		v1.POST("/books", controllers.CreateBook)
+		v1.POST("/books", middleware.AuthenticateJWT(), controllers.CreateBook)
 		v1.GET("/books/:id", controllers.FindBook)
 		v1.PUT("/books/:id", controllers.UpdateBook)
 		v1.DELETE("/books/:id", controllers.DeleteBook)
+
+		v1.POST("/login", auth.LoginHandler)
+		v1.POST("/register", auth.RegisterHandler)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
