# middleware/authenticateJWT.go
@@ -1,0 +1,50 @@
+package middleware
+
+import (
+	"golang-rest-api-template/auth"
+	"net/http"
+	"strings"
+
+	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt"
+)
+
+func AuthenticateJWT() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		const BearerSchema = "Bearer "
+		header := c.GetHeader("Authorization")
+		if header == "" {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Missing Authorization Header"})
+			c.Abort()
+			return
+		}
+
+		if !strings.HasPrefix(header, BearerSchema) {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid Authorization Header"})
+			c.Abort()
+			return
+		}
+
+		tokenStr := header[len(BearerSchema):]
+		claims := &auth.Claims{}
+
+		token, err := jwt.ParseWithClaims(tokenStr, claims, func(token *jwt.Token) (interface{}, error) {
+			return auth.JwtKey, nil
+		})
+
+		if err != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			return
+		}
+
+		if !token.Valid {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			return
+		}
+
+		c.Set("username", claims.Username)
+		c.Next()
+	}
+}
