# models/models.go
@@ -19,3 +19,16 @@ type UpdateBook struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
 }
+
+type LoginUser struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type User struct {
+	ID        uint      `json:"id" gorm:"primary_key"`
+	Username  string    `json:"username" gorm:"unique"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
+	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+}
